relatorios/202120278/T2/compilador.txt
trab2.cpp: In function ‘int main()’:
trab2.cpp:12:5: error: ‘entrada’ was not declared in this scope
   12 |     entrada >> size;
      |     ^~~~~~~
